<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

    <include layout="@layout/partial_default_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbarStyle="insideOverlay">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_spacing_between_items"
                android:layout_marginBottom="@dimen/spacing_between_items"
                android:src="@drawable/ic_logo_nutripro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing_between_items"
                android:text="@string/register_info"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_title" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_mail_til"
                android:layout_width="match_parent"
                android:theme="@style/InputTextLayout"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_mail"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_password_til"
                android:layout_width="match_parent"
                android:theme="@style/InputTextLayout"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <!--<br.com.mobile2you.estacionaai.components.CustomFontTextView-->
            <!--android:id="@+id/login_forgot_pass"-->
            <!--style="@style/Text.Body"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="right"-->
            <!--android:text="@string/login_label_forgot_password"-->
            <!--android:textColor="@color/color_gray_dark" />-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_password_confirmation_til"
                android:layout_width="match_parent"
                android:theme="@style/InputTextLayout"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_hint_password_confirmation"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_name_til"
                android:layout_width="match_parent"
                android:theme="@style/InputTextLayout"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_hint_name"
                    android:inputType="textPersonName|textCapWords" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/register_gender_sp"
                android:layout_width="match_parent"
                android:layout_height="30dp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_age_til"
                android:layout_width="match_parent"
                android:theme="@style/InputTextLayout"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_hint_age"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_weight_til"
                android:layout_width="match_parent"
                android:theme="@style/InputTextLayout"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_hint_weight_in_kg"
                    android:inputType="number"
                    android:digits="1234567890,."
                    android:imeOptions="actionNext"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_height_til"
                android:layout_width="match_parent"
                android:theme="@style/InputTextLayout"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_hint_height_in_meters"
                    android:inputType="number"
                    android:digits="1234567890,."
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_send_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_spacing_between_items"
                app:backgroundTint="@color/colorPrimary"
                android:text="@string/register_btn_continue"
                android:textColor="@color/color_white" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>
