<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbarStyle="insideOverlay"
    xmlns:app="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x_large_spacing_between_items"
            android:src="@drawable/ic_logo_nutripro" />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_mail_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_mail_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_mail"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <!--<br.com.mobile2you.estacionaai.components.CustomFontTextView-->
            <!--android:id="@+id/login_forgot_pass"-->
            <!--style="@style/Text.Body"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="right"-->
            <!--android:text="@string/login_label_forgot_password"-->
            <!--android:textColor="@color/color_gray_dark" />-->

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_spacing_between_items"
            android:onClick="onEnterClicked"
            android:textColor="@color/color_white"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login_button_enter"
            />

        <TextView
            android:id="@+id/login_register_tv"
            android:textSize="@dimen/text_large_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/spacing_between_items"
            android:gravity="center"
            android:clickable="true"
            android:onClick="onRegisterClicked"
            android:text="@string/login_label_register"
            android:textColor="@color/colorPrimaryDark" />



    </LinearLayout>

</ScrollView>
